Bug 1840199: Do not fire a statechange event due to RTCPeerConnection.close(). r=mjf

Differential Revision: https://phabricator.services.mozilla.com/D184746