dom/media/webrtc/jsapi/RTCDtlsTransport.cpp
@@ -26,36 +26,37 @@ JSObject* RTCDtlsTransport::WrapObject(JSContext* aCx,
   return RTCDtlsTransport_Binding::Wrap(aCx, this, aGivenProto);
 }
 
-void RTCDtlsTransport::UpdateState(TransportLayer::State aState) {
+void RTCDtlsTransport::UpdateStateNoEvent(TransportLayer::State aState) {
   if (mState == RTCDtlsTransportState::Closed) {
     return;
   }
 
-  RTCDtlsTransportState newState = mState;
   switch (aState) {
     case TransportLayer::TS_NONE:
       break;
     case TransportLayer::TS_INIT:
       break;
     case TransportLayer::TS_CONNECTING:
-      newState = RTCDtlsTransportState::Connecting;
+      mState = RTCDtlsTransportState::Connecting;
       break;
     case TransportLayer::TS_OPEN:
-      newState = RTCDtlsTransportState::Connected;
+      mState = RTCDtlsTransportState::Connected;
       break;
     case TransportLayer::TS_CLOSED:
-      newState = RTCDtlsTransportState::Closed;
+      mState = RTCDtlsTransportState::Closed;
       break;
     case TransportLayer::TS_ERROR:
-      newState = RTCDtlsTransportState::Failed;
+      mState = RTCDtlsTransportState::Failed;
       break;
   }
+}
 
-  if (newState == mState) {
+void RTCDtlsTransport::UpdateState(TransportLayer::State aState) {
+  RTCDtlsTransportState oldState = mState;
+  UpdateStateNoEvent(aState);
+  if (oldState == mState) {
     return;
   }
-
-  mState = newState;
 
   EventInit init;
   init.mBubbles = false;
